Update content in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="cuadro-animado">
         <div class="contenido">
-            <h2>Alex Kbro</h2>
-            <p>Q FUE</p>
+            <h2>DIVINO</h2>
+            <p>GO DOTITA?</p>
         </div>
     </div>
 </body>
+
 </html>
