cambio de pagina a rally

--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menú con Bordes de Neón</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="cuadro-animado">
-        <div class="contenido">
-            <h2>DIVINO</h2>
-            <p>GO DOTITA?</p>
+
+    <nav class="menu-navegacion">
+        <div class="opcion-neon">
+            <a href="#">Inicio</a>
+        </div>
+
+        <div class="opcion-neon">
+            <a href="#">Pilotos
+            </a>
+        </div>
+
+        <div class="opcion-neon">
+            <a href="#">Resultados</a>
+        </div>
+
+        <div class="opcion-neon">
+            <a href="#">Videos</a>
+        </div>
+    </nav>
+    <div class="Contenido1">
+        <h1>CAMINOS DEL INCA</h1>
+        <h1>RUTA AYAVIRI-CONDOROMA</h1>
+    </div>
+    <div class="Contenido2">
+        <div class="Imagenruta">
+        <img src="Ruta.png" alt="Ruta">
+        </div>
+        <div class="textoR">
+            <h3>Resumen de la ruta
+            <p>La ruta Ayaviri – Condoroma en el Caminos del Inca 2025 es uno de los tramos más importantes de la Etapa 5 
+                (Cusco – Arequipa). Tiene una distancia aproximada de 119 kilómetros y atraviesa zonas altoandinas como Ocuviri y
+                 Karina, incorporando caminos nuevos e inéditos que elevan el nivel de dificultad.
+                Este especial combina tramos de alta velocidad con curvas cerradas y superficies irregulares, lo que exige una
+                gran concentración de los pilotos y un buen rendimiento mecánico de los vehículos. Además, la altitud y el clima frío 
+                añaden un reto extra para todos los competidores.
+                Por disputarse en la parte final de la competencia, antes del mítico tramo Imata – Chiguata, este recorrido es 
+                decisivo para la clasificación general. Un buen tiempo aquí puede asegurar posiciones importantes o incluso definir al ganador del rally.
+                En total, el rally cuenta con 2,182 km, de los cuales 1,308 km corresponden a especiales, y Ayaviri – Condoroma d
+             estaca como uno de los más técnicos y estratégicos de toda la edición.</p>    
         </div>
     </div>
-</body>
-
+    </body>
 </html>
