--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú con Bordes de Neón</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,16 +14,16 @@
         </div>
 
         <div class="opcion-neon">
-            <a href="#">Pilotos
+            <a href="Pilotos.html">Pilotos
             </a>
         </div>
 
         <div class="opcion-neon">
-            <a href="#">Resultados</a>
+            <a href="Resultados.html">Resultados</a>
         </div>
 
         <div class="opcion-neon">
-            <a href="#">Videos</a>
+            <a href="Videos.html">Videos</a>
         </div>
     </nav>
     <div class="Contenido1">
