--- a/Pilotos.html
+++ b/Pilotos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pilotos</title>
     <link rel="stylesheet" href="styles2.css">
+    <script src="app.js"></script>
 </head>
 <body>
      <nav class="menu-navegacion">
@@ -65,6 +66,19 @@
                 público y de otros pilotos.
                 Su nombre es sinónimo de regularidad, estrategia y velocidad, y es considerado uno de los favoritos en cada edición de 
                 Caminos del Inca, representando la nueva generación de pilotos de élite del automovilismo peruano.</p>    
+        </div>
+    </div>
+    <div class="trigger-fondo" data-bg="Rallyfnd4.jpg"></div>
+    <div class="Contenido4">
+        <div class="Imagenpalomino">
+        <img src="richardpalomino.webp" alt="palomino">
+        </div>
+        <div class="textoR3">
+            <h3>Richard Palomino</h3>
+            <p>Richard Palomino es uno de los pilotos peruanos más destacados y experimentados en Caminos del Inca, reconocido por su gran habilidad en terrenos difíciles y su constancia a lo largo de los años. Originario de la región andina, ha demostrado un profundo conocimiento de las rutas altoandinas, lo que le da una ventaja en etapas técnicas y de gran altitud.
+            A lo largo de su carrera, ha conseguido importantes victorias y podios, consolidándose como uno de los principales protagonistas del rally nacional. Su estilo de manejo combina agresividad controlada con una gran capacidad para conservar la mecánica, lo que le permite mantenerse competitivo durante toda la competencia.
+            Palomino es también un referente por su regularidad y fortaleza mental, factores que le han permitido mantenerse entre los mejores pilotos del país. Ha sido un rival constante para otros grandes nombres como Raúl Orlandini Grippy y Eduardo Castro, protagonizando emocionantes duelos en diversas ediciones de la competencia.
+            Su figura representa el espíritu combativo del automovilismo peruano, y cada año es considerado un candidato fuerte al título, gracias a su experiencia, talento y conocimiento del terreno.</p>    
         </div>
     </div>
     </body>
