--- a/Pilotos.html
+++ b/Pilotos.html
@@ -8,6 +8,7 @@
     <script src="app.js"></script>
 </head>
 <body>
+    
      <nav class="menu-navegacion">
         <div class="opcion-neon">
             <a href="index.html">Inicio</a>
@@ -68,7 +69,6 @@
                 Caminos del Inca, representando la nueva generación de pilotos de élite del automovilismo peruano.</p>    
         </div>
     </div>
-    <div class="trigger-fondo" data-bg="Rallyfnd4.jpg"></div>
     <div class="Contenido4">
         <div class="Imagenpalomino">
         <img src="richardpalomino.webp" alt="palomino">
@@ -81,6 +81,17 @@
             Su figura representa el espíritu combativo del automovilismo peruano, y cada año es considerado un candidato fuerte al título, gracias a su experiencia, talento y conocimiento del terreno.</p>    
         </div>
     </div>
+        <div class="trigger-fondo" data-bg="Rallyfnd4.jpg"></div>
+
     </body>
+    <footer class="site-footer">
+    <div class="footer-content">
+        <p><strong>Contacto para Contratos</strong></p>
+        <p>Puedes escribirme a:</p>
+        <p>
+            <a href="ahuaytach@unsa.edu.pe">ahuaytach@unsa.edu.pe</a>
+        </p>
+    </div>
+</footer>
 </body>
 </html>
