--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <nav class="menu-navegacion">
         <div class="opcion-neon">
             <a href="#">Inicio</a>
@@ -26,14 +25,17 @@
             <a href="Videos.html">Videos</a>
         </div>
     </nav>
+    <div class="ContenidoP">
     <div class="Contenido1">
         <h1>CAMINOS DEL INCA</h1>
         <h1>RUTA AYAVIRI-CONDOROMA</h1>
     </div>
+    <div class="ContenidoIntro">
+        <p>
+            ¡Bienvenidos a la cobertura del <strong>Caminos del Inca 2025</strong>, el rally más importante y desafiante de Perú! Este año, los mejores pilotos del país se enfrentan a 2,182 km de pura adrenalina, cruzando los Andes en una prueba de resistencia y velocidad. Sigue con nosotros toda la acción, conoce a los pilotos y no te pierdas los resultados etapa por etapa.
+        </p>
+    </div>
     <div class="Contenido2">
-        <div class="Imagenruta">
-        <img src="Ruta.png" alt="Ruta">
-        </div>
         <div class="textoR">
             <h3>Resumen de la ruta
             <p>La ruta Ayaviri – Condoroma en el Caminos del Inca 2025 es uno de los tramos más importantes de la Etapa 5 
@@ -47,7 +49,50 @@
                 En total, el rally cuenta con 2,182 km, de los cuales 1,308 km corresponden a especiales, y Ayaviri – Condoroma d
              estaca como uno de los más técnicos y estratégicos de toda la edición.</p>    
         </div>
+    </div>    
+    <div class="Contenido3">
+
+    <div class="Maparuta">
+        <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1bZTqvRNi58MLrZ5QdzgRr9U2xJ046dk&ehbc=2E312F" width="600" height="600"></iframe>
     </div>
+
+    <div class="Descripcion">
+        <h3>🏁 Tramo Crucial: Ayaviri - Condoroma</h3>
+        <p>Este es uno de los tramos más estratégicos y desafiantes del Rally Caminos del Inca, formando parte de la **Etapa 5 (Cusco - Arequipa)**.</p>
+        <ul>
+            <li>**Distancia de la Prueba Especial (PE):** Aproximadamente **110 kilómetros**.</li>
+            <li>**Altitud y Terreno:** La ruta atraviesa zonas altoandinas, como **Ocuviri y Karina**...</li>
+            <li>**Desafío Clave:** La **altitud extrema** y el **clima frío**...</li>
+            <li>**Importancia:** Un buen tiempo en Ayaviri-Condoroma es decisivo...</li>
+        </ul>
+               
+
+        <p>La distancia total de competencia del Rally Caminos del Inca es de **1,308 km** cronometrados...</p>
+                <div id="trigger-fundido"></div>
+
+        </div>
+        </div>
+    </div>
+    <div class="fondo">
+
+    <img class="img-fondo" 
+         src="Rallyfnd2.jpg"  alt="Fondo Original Rally">
+
+    <img class="img-encima" 
+         src="Rallyfnd3.jpg" 
+         alt="Fondo Nuevo">
+    </div>
+<script src="app2.js"></script>
+    <footer class="site-footer">
+    <div class="footer-content">
+        <p><strong>Contacto para Contratos</strong></p>
+        <p>Puedes escribirme a:</p>
+        <p>
+            <a href="ahuaytach@unsa.edu.pe">ahuaytach@unsa.edu.pe</a>
+        </p>
+    </div>
+    </footer>
+
     </body>
 
 </html>
